--- a/pages/global.css
+++ b/pages/global.css
@@ -1,3 +1,9 @@
 body {
   margin: 0;
 }
+.ant-popover .ant-popover-arrow {
+  display: none;
+}
+.ant-popover .ant-popover-content .ant-popover-inner {
+  padding: 0;
+}
